Added location info

--- a/code/utility/count_motifs.ipynb
+++ b/code/utility/count_motifs.ipynb
@@ -114,6 +114,8 @@
       "21      VT1592.MEMB007C          1    1    0   0   0\n",
       "22      VT1592.MEMB007D          1    1    0   0   0\n",
       "23      VT1592.MEMB008C          1    1    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(885, 891), (820, 826), (605, 611), (841, 847), (904, 910), (605, 611), (2762, 2768), (878, 884)], 'cad': [(632, 643)], 'gt': [], 'hb': [(1136, 1146), (674, 684)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0870.fa\n",
@@ -142,6 +144,8 @@
       "21      VT0870.MEMB006B          0    1    0   0   0\n",
       "22      VT0870.MEMB007B          0    2    0   0   0\n",
       "23      VT0870.MEMB007D          0    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(172, 178), (1957, 1963), (1940, 1946), (170, 176), (1757, 1763), (172, 178), (1983, 1989), (172, 178), (1949, 1955), (1822, 1828), (618, 624), (172, 178), (2098, 2104)], 'cad': [], 'gt': [], 'hb': [(664, 674)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1419.fa\n",
@@ -170,6 +174,8 @@
       "21      VT1419.MEMB006B          0    0    0   0   0\n",
       "22      VT1419.MEMB007B          0    0    0   0   0\n",
       "23      VT1419.MEMB008C          0    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(189, 195)], 'cad': [], 'gt': [], 'hb': []}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1594.fa\n",
@@ -198,6 +204,8 @@
       "21      VT1594.MEMB007C          1    0    0   0   1\n",
       "22      VT1594.MEMB007D          1    0    0   0   0\n",
       "23      VT1594.MEMB008C          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(1291, 1297), (1093, 1099), (1312, 1318)], 'cad': [(1427, 1438)], 'gt': [], 'hb': [(1776, 1786), (115, 125), (1429, 1439), (2424, 2434), (1292, 1302), (994, 1004)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0845.fa\n",
@@ -226,6 +234,8 @@
       "21      VT0845.MEMB007B          1    0    0   0   0\n",
       "22      VT0845.MEMB007D          1    0    0   0   0\n",
       "23      VT0845.MEMB008C          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(952, 958)], 'cad': [], 'gt': [], 'hb': [(1301, 1311), (1325, 1335), (557, 567), (1908, 1918)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0877.fa\n",
@@ -254,6 +264,8 @@
       "21      VT0877.MEMB006B          1    1    0   0   0\n",
       "22      VT0877.MEMB007B          1    0    1   0   0\n",
       "23      VT0877.MEMB007D          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(663, 669), (2004, 2010), (604, 610), (2457, 2463), (873, 879), (592, 598), (1611, 1617), (1415, 1421), (3099, 3105), (619, 625), (571, 577), (944, 950), (779, 785), (844, 850), (1724, 1730), (583, 589), (914, 920), (564, 570), (573, 579)], 'cad': [(1062, 1073), (884, 895), (1310, 1321), (1059, 1070), (1000, 1011), (769, 780), (1284, 1295), (879, 890), (1028, 1039), (772, 783)], 'gt': [], 'hb': [(1904, 1914), (1382, 1392)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0851.fa\n",
@@ -282,8 +294,16 @@
       "21      VT0851.MEMB007B          0    0    0   0   1\n",
       "22      VT0851.MEMB007D          0    0    0   0   0\n",
       "23      VT0851.MEMB008C          0    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(1080, 1086), (2128, 2134)], 'cad': [], 'gt': [], 'hb': [(1151, 1161), (1182, 1192), (1162, 1172), (1164, 1174), (1175, 1185), (1128, 1138)]}\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Result for outlier_rm_with_length_VT0871.fa\n",
       "   region_id.special_id expression  bcd  cad  gt  hb\n",
       "0       VT0871.MEMB002E          1    0    0   0   0\n",
@@ -310,6 +330,8 @@
       "21      VT0871.MEMB006B          1    0    0   0   0\n",
       "22      VT0871.MEMB007B          1    0    0   0   0\n",
       "23      VT0871.MEMB007D          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(556, 562)], 'cad': [], 'gt': [], 'hb': []}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0875.fa\n",
@@ -338,6 +360,8 @@
       "21      VT0875.MEMB006B          1    1    0   0   0\n",
       "22      VT0875.MEMB007B          1    1    0   0   0\n",
       "23      VT0875.MEMB007D          1    1    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(2338, 2344), (2214, 2220), (1887, 1893), (2326, 2332), (1933, 1939), (2115, 2121), (1676, 1682), (2564, 2570), (2669, 2675), (2062, 2068), (2298, 2304), (2486, 2492), (1884, 1890), (2122, 2128), (2251, 2257), (1981, 1987), (2157, 2163), (2246, 2252), (2271, 2277), (1897, 1903), (401, 407), (2682, 2688), (2816, 2822), (1938, 1944), (2481, 2487), (2158, 2164), (2122, 2128)], 'cad': [(1793, 1804), (1038, 1049)], 'gt': [], 'hb': [(2124, 2134)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1595.fa\n",
@@ -366,6 +390,8 @@
       "21      VT1595.MEMB007C          0    1    0   0   1\n",
       "22      VT1595.MEMB007D          0    1    0   0   1\n",
       "23      VT1595.MEMB008C          0    1    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(783, 789), (817, 823), (563, 569), (584, 590), (580, 586), (644, 650), (584, 590), (584, 590), (635, 641), (606, 612), (614, 620), (625, 631), (552, 558), (613, 619), (613, 619), (614, 620), (630, 636), (1693, 1699), (624, 630), (629, 635), (686, 692), (715, 721), (661, 667), (660, 666), (622, 628)], 'cad': [(1796, 1807)], 'gt': [], 'hb': [(1462, 1472), (2251, 2261), (1464, 1474), (1652, 1662)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0985.fa\n",
@@ -394,14 +420,10 @@
       "21      VT0985.MEMB005B          1    4    0   0   0\n",
       "22      VT0985.MEMB007B          1    2    0   0   0\n",
       "23      VT0985.MEMB007D          1    2    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(1033, 1039), (2094, 2100), (2145, 2151), (657, 663), (1683, 1689), (816, 822), (1785, 1791), (2064, 2070), (414, 420), (1331, 1337), (1807, 1813), (715, 721), (1717, 1723), (2311, 2317), (2149, 2155), (2342, 2348), (763, 769), (1773, 1779), (1782, 1788), (1778, 1784), (411, 417), (1342, 1348), (1788, 1794), (671, 677), (1698, 1704), (1041, 1047), (2128, 2134), (2366, 2372), (1436, 1442), (2429, 2435), (3083, 3089), (1973, 1979), (1648, 1654), (999, 1005), (2200, 2206), (768, 774), (1315, 1321), (1423, 1429), (1738, 1744), (1289, 1295), (1376, 1382), (1651, 1657), (2211, 2217), (859, 865), (1931, 1937), (838, 844), (1869, 1875)], 'cad': [], 'gt': [], 'hb': [(435, 445), (1273, 1283)]}\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Result for outlier_rm_with_length_VT1404.fa\n",
       "   region_id.special_id expression  bcd  cad  gt  hb\n",
       "0       VT1404.MEMB002A          1    0    0   0   0\n",
@@ -428,6 +450,8 @@
       "21      VT1404.MEMB006A          1    0    0   0   0\n",
       "22      VT1404.MEMB006B          1    0    0   0   0\n",
       "23      VT1404.MEMB008C          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [], 'cad': [], 'gt': [], 'hb': []}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1483.fa\n",
@@ -456,6 +480,8 @@
       "21      VT1483.MEMB004E          1    0    0   0   0\n",
       "22      VT1483.MEMB005D          1    0    0   0   0\n",
       "23      VT1483.MEMB006C          1    0    0   0   1\n",
+      "Locations:\n",
+      "{'bcd': [(502, 508), (549, 555), (2007, 2013), (1914, 1920), (2103, 2109)], 'cad': [], 'gt': [], 'hb': [(741, 751), (741, 751), (836, 846), (746, 756), (1500, 1510)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1488.fa\n",
@@ -484,8 +510,16 @@
       "21      VT1488.MEMB004E          1    2    0   0   2\n",
       "22      VT1488.MEMB005D          1    1    0   0   0\n",
       "23      VT1488.MEMB006C          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(1481, 1487), (1946, 1952), (2255, 2261), (1834, 1840), (3009, 3015), (1823, 1829), (2583, 2589), (2108, 2114), (111, 117), (2517, 2523), (2631, 2637), (1791, 1797), (355, 361), (1864, 1870), (2760, 2766), (1463, 1469), (1930, 1936), (2241, 2247), (2968, 2974), (2275, 2281), (2054, 2060), (2831, 2837), (1955, 1961), (2264, 2270), (2698, 2704), (1975, 1981), (2728, 2734), (338, 344)], 'cad': [(248, 259)], 'gt': [], 'hb': [(2557, 2567), (1679, 1689), (1715, 1725), (1887, 1897), (1752, 1762)]}\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Result for outlier_rm_with_length_VT1418.fa\n",
       "   region_id.special_id expression  bcd  cad  gt  hb\n",
       "0       VT1418.MEMB002A          0    2    0   0   0\n",
@@ -512,6 +546,8 @@
       "21      VT1418.MEMB006B          0    0    0   0   1\n",
       "22      VT1418.MEMB007B          0    2    0   0   0\n",
       "23      VT1418.MEMB008C          0    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(422, 428), (750, 756), (974, 980), (505, 511), (663, 669), (991, 997), (659, 665), (1516, 1522), (319, 325), (648, 654), (966, 972), (518, 524), (540, 546), (688, 694), (903, 909), (1006, 1012), (1845, 1851), (2423, 2429), (663, 669), (991, 997), (438, 444), (1100, 1106), (625, 631), (953, 959)], 'cad': [], 'gt': [], 'hb': [(288, 298), (282, 292)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1298.fa\n",
@@ -540,6 +576,8 @@
       "21      VT1298.MEMB004A          0    0    0   0   0\n",
       "22      VT1298.MEMB006B          0    1    0   0   0\n",
       "23      VT1298.MEMB007B          0    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(710, 716), (1823, 1829), (654, 660), (1916, 1922), (710, 716), (1704, 1710), (702, 708), (1805, 1811), (2312, 2318), (1823, 1829), (701, 707), (662, 668)], 'cad': [(1451, 1462)], 'gt': [], 'hb': [(1387, 1397), (1364, 1374), (1154, 1164), (1659, 1669), (1270, 1280), (1453, 1463)]}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0849.fa\n",
@@ -568,6 +606,8 @@
       "21      VT0849.MEMB007B          1    1    0   0   0\n",
       "22      VT0849.MEMB007D          1    0    0   0   0\n",
       "23      VT0849.MEMB008C          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(472, 478), (1569, 1575), (464, 470), (475, 481), (1583, 1589), (1563, 1569), (475, 481), (1577, 1583), (456, 462), (2080, 2086), (464, 470)], 'cad': [], 'gt': [], 'hb': []}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT1219.fa\n",
@@ -596,14 +636,10 @@
       "21      VT1219.MEMB006A          1    0    0   0   0\n",
       "22      VT1219.MEMB006C          1    0    0   0   0\n",
       "23      VT1219.MEMB007B          1    0    1   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(1781, 1787)], 'cad': [(1336, 1347)], 'gt': [], 'hb': []}\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Result for outlier_rm_with_length_VT0850.fa\n",
       "   region_id.special_id expression  bcd  cad  gt  hb\n",
       "0           VT0850.dkik          1    1    0   0   0\n",
@@ -630,6 +666,8 @@
       "21      VT0850.MEMB007B          1    1    0   0   0\n",
       "22      VT0850.MEMB007D          1    1    0   0   0\n",
       "23      VT0850.MEMB008C          1    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [(1797, 1803), (1011, 1017), (1046, 1052), (1023, 1029), (1011, 1017), (1035, 1041), (1232, 1238), (1143, 1149), (953, 959), (166, 172), (1020, 1026), (141, 147), (1013, 1019), (1089, 1095)], 'cad': [], 'gt': [], 'hb': []}\n",
       "\n",
       "\n",
       "Result for outlier_rm_with_length_VT0868.fa\n",
@@ -658,6 +696,8 @@
       "21      VT0868.MEMB006B          0    0    0   0   0\n",
       "22      VT0868.MEMB007B          0    0    0   0   0\n",
       "23      VT0868.MEMB007D          0    0    0   0   0\n",
+      "Locations:\n",
+      "{'bcd': [], 'cad': [], 'gt': [], 'hb': []}\n",
       "\n",
       "\n"
      ]
@@ -691,6 +731,10 @@
     "    row_name = [region_id + \".\" + species_id for species_id in all_species]\n",
     "    result = pandas.DataFrame(row_name, columns = [\"region_id.special_id\"])\n",
     "    result[\"expression\"] = function_indicators\n",
+    "    \n",
+    "    # Build a dictionary to save the locations where the motifs show up\n",
+    "    locations = {motif: [] for motif in motifs}\n",
+    "    \n",
     "    for i in range(len(motifs)):\n",
     "        counts_for_each_species = []\n",
     "        \n",
@@ -702,11 +746,16 @@
     "            count = 0\n",
     "            for w in words:\n",
     "                count += len(re.findall(w, all_sequences[j]))\n",
+    "                iterator = re.finditer(w, all_sequences[j])\n",
+    "                for match in iterator:\n",
+    "                    locations[motifs[i]].append(match.span())\n",
     "            counts_for_each_species.append(count)\n",
-    "        result[motifs[i]] = counts_for_each_species\n",
+    "        result[motifs[i]] = counts_for_each_species # One column per motif\n",
     "        \n",
     "    print(\"Result for \" + file)\n",
     "    print(result)\n",
+    "    print(\"Locations:\")\n",
+    "    print(locations)\n",
     "    print(\"\\n\")"
    ]
   },
