Added only TFBS experiment

--- a/code/2019-02-04_shuffling_on_padding_at_the_end_with_size_1000_bidirectional_no_TFBS.ipynb
+++ b/code/2019-02-04_shuffling_on_padding_at_the_end_with_size_1000_bidirectional_no_TFBS.ipynb
@@ -630,7 +630,7 @@
    "source": [
     "**Conclusion**:\n",
     "\n",
-    "- Using only DNA sequences and not using TFBS data, the neural network is unable to produce accurate results. It is possible that the DNA is too noisy and that the TFBS data concentrates the important information making it possible for the neural network to make accurate predictions."
+    "- Using only DNA sequences and not using TFBS data, the neural network converges much more slowly than with both DNA sequences and TFBS data. It is possible that the DNA is too noisy and that the TFBS data concentrates the important information making it possible for the neural network to make accurate predictions much more quickly."
    ]
   },
   {
