--- a/code/experiments/conv_rnn_hybrid_model/optimize_model_and_retrieve_motifs.ipynb
+++ b/code/experiments/conv_rnn_hybrid_model/optimize_model_and_retrieve_motifs.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, shutil, pickle, shelve\n",
-    "from Bio import SeqIO\n",
+    "#from Bio import SeqIO\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
+    "from keras.models import load_model, Model\n",
     "from keras.utils import plot_model\n",
     "from keras.models import Model, Sequential\n",
     "from keras.models import Sequential\n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
     "    output has shape = (N, n + 2m - 2, 4)\n",
     "    \"\"\"\n",
     "    N, n, C = input_x.shape\n",
-    "    pad_value, num_pad = 0.25, n + kernel_size - 1\n",
+    "    pad_value, num_pad = 0.25, kernel_size - 1\n",
     "    pad_matrix = np.full((N, num_pad, C), pad_value)\n",
     "    return np.concatenate((pad_matrix, input_x, pad_matrix), axis=1)\n",
     "        \n",
@@ -76,7 +78,7 @@
     "    output: (k, m, 4)\n",
     "    \"\"\"\n",
     "    N, L, C = test_seqs.shape\n",
-    "    motif_length, _ = kernel.shape\n",
+    "    m, _ = kernel.shape\n",
     "    \n",
     "    ################################\n",
     "    # Reconstruct the motif detector\n",
@@ -87,7 +89,7 @@
     "    # Pass TEST_SEQUENCE through the motif detector\n",
     "    # activation has a shape (N, n + m - 1)\n",
     "    ###############################################\n",
-    "    activation = conv_layer(test_sequence)\n",
+    "    activation = kernel(test_sequence)\n",
     "    \n",
     "    #################################################################\n",
     "    # Extract those in the TEST_SEQUENCE that has least one position\n",
@@ -99,11 +101,109 @@
     "    \n",
     "    # activated_indices should have a shape (k, )\n",
     "    activated_indices = [i for i in range(N) if candidate[i] > 0]\n",
-    "    activated_seq, end = test_sequences[:, activated_indices, :], potential_start[activated_indices]\n",
-    "    start = end - motif_length + 1\n",
-    "    activated_subseq = activated_seq[start:end+1, :]\n",
-    "    pass"
+    "    \n",
+    "    # activated_seq should have a shape(k, n + 2m - 2, 4)\n",
+    "    activated_seq, end = test_sequences[activated_indices, :, :], potential_start[activated_indices]\n",
+    "    start = end - m + 1\n",
+    "    activated_subseq = activated_seq[:, start:end+1, :]\n",
+    "    return activated_subseq"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model('../../models/hybrid_net.h5')\n",
+    "\n",
+    "filters = model.layers[0].get_weights()[0]\n",
+    "bias = model.layers[0].get_weights()[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((15, 4), ())"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter0 = filters[:, :, 0]\n",
+    "bias0 = bias[0]\n",
+    "filter0.shape, bias0.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 1028, 4)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N, n, m = 100, 1000, 15\n",
+    "test_seq = np.random.randint(2, size = N*n*4).reshape((N, n, 4))\n",
+    "padded_test_seq = pad_for_detector(test_seq, m)\n",
+    "padded_test_seq.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((15, 4), ())"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter0.shape, bias0.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv_layer = tf.layers.Conv1D(filters = 1,\n",
+    "                              kernel_size = m,\n",
+    "                              trainable=False)\n",
+    "weight, bias = tf.constant(filter0, dtype=tf.float32), tf.constant(bias0, dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
