--- a/code/experiments/conv_rnn_hybrid_model/constructed_models_by_tensorflow.ipynb
+++ b/code/experiments/conv_rnn_hybrid_model/constructed_models_by_tensorflow.ipynb
@@ -127,10 +127,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "code_folding": [
-     1,
-     2
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
