added more documentation on helper functions

--- a/code/experiments/conv_rnn_hybrid_model/inspect_motifs_from_k_fold_data.ipynb
+++ b/code/experiments/conv_rnn_hybrid_model/inspect_motifs_from_k_fold_data.ipynb
@@ -394,13 +394,7 @@
       "11328/11328 [==============================] - 3s 285us/step - loss: 0.2901 - acc: 0.8743 - val_loss: 0.3170 - val_acc: 0.8697\n",
       "Epoch 57/100\n",
       "11328/11328 [==============================] - 3s 293us/step - loss: 0.2938 - acc: 0.8723 - val_loss: 0.3152 - val_acc: 0.8697\n",
-      "Epoch 58/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/100\n",
       "11328/11328 [==============================] - 3s 285us/step - loss: 0.2913 - acc: 0.8742 - val_loss: 0.3073 - val_acc: 0.8757\n",
       "Epoch 59/100\n",
       "11328/11328 [==============================] - 3s 288us/step - loss: 0.2902 - acc: 0.8750 - val_loss: 0.3142 - val_acc: 0.8676\n",
@@ -643,13 +637,7 @@
       "11328/11328 [==============================] - 3s 309us/step - loss: 0.6800 - acc: 0.5439 - val_loss: 0.6770 - val_acc: 0.5625\n",
       "Epoch 5/100\n",
       "11328/11328 [==============================] - 3s 304us/step - loss: 0.6773 - acc: 0.5511 - val_loss: 0.6749 - val_acc: 0.5586\n",
-      "Epoch 6/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 6/100\n",
       "11328/11328 [==============================] - 3s 307us/step - loss: 0.6760 - acc: 0.5474 - val_loss: 0.6727 - val_acc: 0.5742\n",
       "Epoch 7/100\n",
       "11328/11328 [==============================] - 3s 307us/step - loss: 0.6744 - acc: 0.5530 - val_loss: 0.6715 - val_acc: 0.5664\n",
@@ -955,13 +943,7 @@
       "22676/22676 [==============================] - 6s 283us/step - loss: 0.6604 - acc: 0.5591 - val_loss: 0.6627 - val_acc: 0.5723\n",
       "Epoch 44/100\n",
       "22676/22676 [==============================] - 6s 283us/step - loss: 0.6602 - acc: 0.5617 - val_loss: 0.6627 - val_acc: 0.5603\n",
-      "Epoch 45/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 45/100\n",
       "22676/22676 [==============================] - 6s 277us/step - loss: 0.6598 - acc: 0.5649 - val_loss: 0.6622 - val_acc: 0.5707\n",
       "Epoch 46/100\n",
       "22676/22676 [==============================] - 6s 275us/step - loss: 0.6582 - acc: 0.5688 - val_loss: 0.6611 - val_acc: 0.5729\n",
@@ -1265,7 +1247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
